--- a/index.html
+++ b/index.html
@@ -104,14 +104,6 @@
             Escuchanos en vivo desde Youtube, de Lunes a Viernes de 10 a 13hs.
           </p>
         </h3>
-        <ul>
-          <li>
-            <a
-              href="https://open.spotify.com/show/6S8mA8y62qbr2a5UWqMIoA?si=ae98ff33fd22413a"
-              >Spotify</a
-            >
-          </li>
-        </ul>
       </div>
 
       <div id="heroContainer">
@@ -130,88 +122,99 @@
     <section id="cardsContainer">
       <div class="card">
         <img src="/img/logo.png" alt="podcast" />
-        <h3>Episodio 1 - Anticonceptivos para hombres</h3>
+        <h3>ESTA NO TE LA CREO</h3>
         <p>
-          Ricardo Pérez y Slobotzky se ponen a cotorrear como siempre, pero
-          ahora lo están grabando. Escuchalos todos los miercoles hablando de
-          noticias extrañas, datos curiosos, anecdotas hilarantes y aliviana el
-          ombligo de la semana.
+          "Me lo crucé a Ricardo Fort y me dijo que nunca llore por un chico"
+          Anécdotas tremendas random que si las contas, no te las cree nadie.
         </p>
         <a
-          href="https://open.spotify.com/episode/2jJBKPrfckS5uE5A0qnUUN?si=d8Z5wuFJRgG0QYZFgBxJ7g"
+          href="https://open.spotify.com/episode/3vYPtTXLzRFXTaA5lEkspG?si=cSpjj_K9Ts-yRRrWHZKMLA"
+          target="_blank"
+          rel="noopener noreferrer"
           >ESCUCHAR</a
         >
       </div>
       <div class="card">
         <img src="/img/logo.png" alt="podcast" />
-        <h3>Episodio 2 - Olvidé a mi hijo en el aeropuerto</h3>
+        <h3>AUDIOS DE DESCARGO</h3>
         <p>
-          En este episodio cotorreamos con sus anécdotas de la semana “Su
-          momento mas incomodo”
+          Pedir aumento de sueldo, calentarte con tu ex y hasta un Nacho muy
+          furioso con Mark Zuckerberg. Audios de descargos para mandar a la
+          mierda a todo el mundo.
         </p>
         <a
-          href="https://open.spotify.com/episode/6WEjuqtIK6xGc31DgtEnx0?si=IwfyRSviQjWxUWxI_t-GfQ"
+          href="https://open.spotify.com/episode/106vmI3nCmu56J1gv1aXiQ?si=6LWX5VA4QXqfw1QAjtWgbA"
+          target="_blank"
+          rel="noopener noreferrer"
           >ESCUCHAR</a
         >
       </div>
       <div class="card">
         <img src="/img/logo.png" alt="podcast" />
-        <h3>Episodio 3 - Fantasmas con down</h3>
+        <h3>CUANDO GARCAMOS A UN AMIGO</h3>
         <p>
-          Nos pusimos a investigar cuáles son algunas de las excentricidades que
-          han cometido dictadores al rededor del mundo, el público nos contó sus
-          peores osos vomitando y discutimos que haríamos con 1600 pesos al mes.
+          En el día del amigo decidimos hacer lo que no hacen los medios
+          tradicionales y hablamos sobre todas esas veces que nos #cagamos en un
+          amigo: ¿Es normal chamuyarse al ex de un amigo?
         </p>
         <a
-          href="https://open.spotify.com/episode/7kDcnKWbK87l8SBBXksPAb?si=5vGZVzbjR3mx2rTv2d0kGg"
+          href="https://open.spotify.com/episode/53UWA3mCo0FkmCBZ3hjrTH?si=HMtU_O5TSjGK3ge9e8DiZQ"
+          target="_blank"
+          rel="noopener noreferrer"
           >ESCUCHAR</a
         >
       </div>
       <div class="card">
         <img src="/img/logo.png" alt="podcast" />
-        <h3>Episodio 4 - Mi nieto es actor N0P0R</h3>
+        <h3>PREOCUPACIONES DE TURNO</h3>
         <p>
-          En este capítulo analizamos las ventajas y desventajas de ser actor
-          porno, leímos las mejores anécdotas en las pedas y descubrimos que si
-          te lo propones, te puedes comer 9 mil dólares en efectivo.
+          Arrancamos con un test psicológico que nos hizo Flor que nos hizo
+          reflexionar y preguntar: ¿Cuál es tu preocupación del día? ¿Un viaje,
+          un nuevo laburo, un examen que tenés que rendir?
         </p>
         <a
           href="https://open.spotify.com/episode/4AGWDtCke4DqhcLklBpyRi?si=8iofuv0nSf2i5fz8fen5fA"
+          target="_blank"
+          rel="noopener noreferrer"
           >ESCUCHAR</a
         >
       </div>
       <div class="card">
         <img src="/img/logo.png" alt="podcast" />
-        <h3>Episodio 5 - Me agarré a madrazos con un Gorila</h3>
+        <h3>¿SOS GALAN O NEO GALAN?</h3>
         <p>
-          Episodio número 5 con invitado de lujo, nos acompaña El Potro de Aca
-          Shore, platicamos de Keiko, de la gente que apuesta hasta en el
-          hospital y leímos las mejores anécdotas de las confusiones más
-          chistosas que ha sufrido la gente
+          Un nuevo concepto que marca a nuestra generación y divide al país
+          llegó a Nadie Dice Nada: los galanes VS los neo galanes. Brunchear,
+          usar buzos oversize o campera de cuero, escuchar música cool, maneras
+          de usar las redes sociales y los máximos referentes de cada team.
         </p>
         <a
           href="https://open.spotify.com/episode/5XOcKMhrlw7xE09AMJ64B4?si=gHsPBgDkS2qBNHJIVQi3Cg"
+          target="_blank"
+          rel="noopener noreferrer"
           >ESCUCHAR</a
         >
       </div>
       <div class="card">
         <img src="/img/logo.png" alt="podcast" />
-        <h3>Episodio 6 - Le puse Thor a mi hijo</h3>
+        <h3>¿LE GUSTO O ESTOY FLASHEANDO?</h3>
         <p>
-          En este episodio compartimos cuáles han sido las confusiones más
-          divertidas de la gente al mandar un mensaje, hablamos de la persona
-          que le quería poner Thor a su hijo y analizamos cuáles son las fobias
-          más extrañas.
+          Abrimos una nueva puerta en Nadie Dice Nada y nos sacamos dudas de
+          esos momentos en los que no sabíamos si el otro gustaba de nosotros o
+          era solo un flasheo: cancelaciones de citas, inseguridades, likear
+          fotos viejas y reaccionar a historias. ¿Cuál es el límite?
         </p>
         <a
           href="https://open.spotify.com/episode/33maFa4bZt5CJ4NRGdVr2V?si=LqaEyOJhSnivO7W9rDGTVQ"
+          target="_blank"
+          rel="noopener noreferrer"
           >ESCUCHAR</a
         >
       </div>
     </section>
 
     <footer>
-      <p id="copy">Copyright &COPY; 2022 | Emmanuel3240</p>
+      <p id="copy">Copyright &COPY; 2022 | Nadie dice Nada | @Emmanuel3240</p>
     </footer>
   </body>
 </html>
