--- a/index.html
+++ b/index.html
@@ -45,20 +45,20 @@
       rel="stylesheet"
     />
 
-    <title>Nadie dice nada Podcast</title>
+    <title>Nadie dice nada | Podcast</title>
     <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@150;300;400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="/img/ico.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/ico.png" type="image/x-icon" />
   </head>
   <body>
     <header>
       <nav>
         <div class="logoContainer">
           <a href="index.html"
-            ><img id="logo" src="/img/logo.png" alt="logo Nadie dice nada" />
+            ><img id="logo" src="img/logo.png" alt="logo Nadie dice nada" />
           </a>
         </div>
 
@@ -121,7 +121,7 @@
 
     <section id="cardsContainer">
       <div class="card">
-        <img src="/img/logo.png" alt="podcast" />
+        <img src="img/logo.png" alt="podcast" />
         <h3>ESTA NO TE LA CREO</h3>
         <p>
           "Me lo crucé a Ricardo Fort y me dijo que nunca llore por un chico"
@@ -135,7 +135,7 @@
         >
       </div>
       <div class="card">
-        <img src="/img/logo.png" alt="podcast" />
+        <img src="img/logo.png" alt="podcast" />
         <h3>AUDIOS DE DESCARGO</h3>
         <p>
           Pedir aumento de sueldo, calentarte con tu ex y hasta un Nacho muy
@@ -150,7 +150,7 @@
         >
       </div>
       <div class="card">
-        <img src="/img/logo.png" alt="podcast" />
+        <img src="img/logo.png" alt="podcast" />
         <h3>CUANDO GARCAMOS A UN AMIGO</h3>
         <p>
           En el día del amigo decidimos hacer lo que no hacen los medios
@@ -165,7 +165,7 @@
         >
       </div>
       <div class="card">
-        <img src="/img/logo.png" alt="podcast" />
+        <img src="img/logo.png" alt="podcast" />
         <h3>PREOCUPACIONES DE TURNO</h3>
         <p>
           Arrancamos con un test psicológico que nos hizo Flor que nos hizo
@@ -180,7 +180,7 @@
         >
       </div>
       <div class="card">
-        <img src="/img/logo.png" alt="podcast" />
+        <img src="img/logo.png" alt="podcast" />
         <h3>¿SOS GALAN O NEO GALAN?</h3>
         <p>
           Un nuevo concepto que marca a nuestra generación y divide al país
@@ -196,7 +196,7 @@
         >
       </div>
       <div class="card">
-        <img src="/img/logo.png" alt="podcast" />
+        <img src="img/logo.png" alt="podcast" />
         <h3>¿LE GUSTO O ESTOY FLASHEANDO?</h3>
         <p>
           Abrimos una nueva puerta en Nadie Dice Nada y nos sacamos dudas de
