--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     />
     <meta
       property="og:image"
-      content="https://https://reto-02-winter.web.app/img/logo.png"
+      content="https://reto-02-winter.web.app/img/logo.png"
     />
-    <meta property="og:url" content="https://https://reto-02-winter.web.app/" />
+    <meta property="og:url" content="https://reto-02-winter.web.app/" />
     <meta property="og:site_name" content="Nadie dice nada" />
     <meta property="twitter:type" content="website" />
     <meta property="twitter:title" content="Nadie dice nada Podcast" />
@@ -32,12 +32,9 @@
     />
     <meta
       property="twitter:image"
-      content="https://https://reto-02-winter.web.app/img/logo.png"
+      content="https://reto-02-winter.web.app/img/logo.png"
     />
-    <meta
-      property="twitter:url"
-      content="https://https://reto-02-winter.web.app/"
-    />
+    <meta property="twitter:url" content="https://reto-02-winter.web.app/" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="fonts/stylesheet.css" />
     <link
