--- a/index.html
+++ b/index.html
@@ -53,29 +53,26 @@
   <body>
     <header>
       <nav>
-        <div class="logoContainer">
-          <a href="index.html"
-            ><img id="logo" src="img/logo.png" alt="logo Nadie dice nada" />
-          </a>
-        </div>
+        <a href="index.html"
+          ><img id="logo" src="img/logo.png" alt="logo Nadie dice nada" />
+        </a>
 
-        <div id="botonesContainer">
-          <ul>
-            <li>
-              <a
-                href="https://open.spotify.com/show/6S8mA8y62qbr2a5UWqMIoA?si=55b33befc2594b29"
-                target="_blank"
-                rel="noopener noreferrer"
-                >Podcast</a
-              >
-            </li>
-            <li>
-              <a href="#cardsContainer">Episodios</a>
-            </li>
-          </ul>
-        </div>
+        <ul>
+          <li>
+            <a
+              href="https://open.spotify.com/show/6S8mA8y62qbr2a5UWqMIoA?si=55b33befc2594b29"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Podcast</a
+            >
+          </li>
+          <li>
+            <a href="#cardsContainer">Episodios</a>
+          </li>
+        </ul>
       </nav>
-
+    </header>
+    <section id="heroContainer">
       <div
         itemscope
         itemtype="https://schema.org/PodcastSeries"
@@ -103,7 +100,7 @@
         </h3>
       </div>
 
-      <div id="heroContainer">
+      <div>
         <iframe
           style="border-radius: 12px"
           src="https://open.spotify.com/embed/show/6S8mA8y62qbr2a5UWqMIoA?utm_source=generator&theme=0"
@@ -114,7 +111,7 @@
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
         ></iframe>
       </div>
-    </header>
+    </section>
 
     <section id="cardsContainer">
       <div class="card">
