--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       content="#NadieDiceNada con Nico Occhiato, Flor Jazmín Peña, Nati Jota y Nacho Elizalde. Ahora también te acompañamos en formato podcast. Escuchanos en vivo desde Youtube, de Lunes a Viernes de 10 a 13hs."
     />
     <meta name="keywords" content="Nadie dice nada, podcast, humor, radio" />
-    <meta name="author" content="Emmanuel3240" />
+    <meta name="author" content="@Emmanuel3240" />
     <meta name="copyright" content="Nadie dice nada" />
     <meta name="robots" content="index follow" />
     <meta property="og:title" content="Nadie dice nada Podcast" />
